--- a/app/assets/stylesheets/scrivito_spacing/application.css
+++ b/app/assets/stylesheets/scrivito_spacing/application.css
@@ -3,13 +3,13 @@ hr.widget {
 }
 
 hr.widget.medium {
-  margin: 20px 0;
+  padding: 20px 0;
 }
 
 hr.widget.small {
-  margin: 10px 0;
+  padding: 10px 0;
 }
 
 hr.widget.large {
-  margin: 30px 0;
+  padding: 30px 0;
 }
