--- a/app/views/space_widget/thumbnail.html.erb
+++ b/app/views/space_widget/thumbnail.html.erb
@@ -1,13 +1,3 @@
-<div class="editing-dialog-thumbnail">
-  <div class="visualization">
-    <span class="icon editing-icon-hr"></span>
-  </div>
-
-  <div class="title">
-    Space
-  </div>
-
-  <div class="description">
-    Creates a space between two widgets.
-  </div>
-</div>
+<%= scrivito_thumbnail 'Whitespace', image_tag("spacing.png") do %>
+  Creates a space between two widgets.
+<% end %>
