Details view with scrivito_details_for

--- a/app/views/space_widget/details.html.erb
+++ b/app/views/space_widget/details.html.erb
@@ -1,2 +1,3 @@
-<h4>Größe</h4>
-<%= scrivito_toggle_button_editor(widget, :size) %>
+<%= scrivito_details_for 'Size' do %>
+  <%= scrivito_toggle_button_editor(widget, :size) %>
+<% end %>
