--- a/app/views/space_widget/thumbnail.html.erb
+++ b/app/views/space_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Whitespace', image_tag("spacing.png") do %>
+<%= scrivito_thumbnail 'Whitespace', image_tag("widget_preview_whitespace.png") do %>
   Creates a space between two widgets.
 <% end %>
