--- a/app/views/space_widget/details.html.erb
+++ b/app/views/space_widget/details.html.erb
@@ -1,3 +1,3 @@
 <%= scrivito_details_for 'Size' do %>
-  <%= scrivito_toggle_button_editor(widget, :size) %>
+  <%= scrivito_tag(:div, widget, :size) %>
 <% end %>
