Locals for thumbnail and details views

--- a/app/views/space_widget/thumbnail.html.erb
+++ b/app/views/space_widget/thumbnail.html.erb
@@ -1,3 +1,3 @@
-<%= scrivito_thumbnail 'Whitespace', image_tag("widget_preview_whitespace.png") do %>
-  Creates a space between two widgets.
+<%= scrivito_thumbnail t('scrivito_space_widget.thumbnail.title', default: 'Space'), image_tag("widget_preview_whitespace.png") do %>
+  <%= t('scrivito_space_widget.thumbnail.description', default: 'Adds whitespace between two widgets') %>
 <% end %>
