Add a field for a free size attribute

--- a/app/views/space_widget/details.html.erb
+++ b/app/views/space_widget/details.html.erb
@@ -1,3 +1,7 @@
 <%= scrivito_details_for t('scrivito_space_widget.details.size', default: 'Size') do %>
   <%= scrivito_tag(:div, widget, :size) %>
 <% end %>
+
+<%= scrivito_details_for t('scrivito_space_widget.details.free_size', default: 'Free size') do %>
+  <%= scrivito_tag(:div, widget, :free_size) %>
+<% end %>
