--- a/app/views/space_widget/show.html.erb
+++ b/app/views/space_widget/show.html.erb
@@ -1,1 +1,1 @@
-<hr class="widget <%= widget.space_size %>">
+<hr class="space-widget <%= widget.space_size %>" style="height: <%= widget.space_free_size %>">
