Add drag handle

--- a/app/views/space_widget/show.html.erb
+++ b/app/views/space_widget/show.html.erb
@@ -1,1 +1,5 @@
-<hr class="space-widget <%= widget.space_size %>" style="height: <%= widget.space_free_size %>">
+<hr class="scrivito-space-widget space-widget <%= widget.space_size %>" style="height: <%= widget.space_free_size %>">
+<% if scrivito_in_editable_view? && widget.size == 'free' %>
+  <%= scrivito_tag :div, widget, :free_size, class: 'hidden' %>
+  <div class="scrivito-space-widget-handle"></div>
+<% end %>
