--- a/app/assets/stylesheets/scrivito_space_widget.scss
+++ b/app/assets/stylesheets/scrivito_space_widget.scss
@@ -28,6 +28,19 @@ hr.scrivito-space-widget.xxl-large {
   padding: 50px 0;
 }
 
+.scrivito-space-widget-size {
+  margin: 0;
+  padding: 0;
+  font-size: 10px;
+  line-height: 10px;
+  position: absolute;
+  bottom: 35px;
+  left: 20px;
+  right: 20px;
+  text-align: center;
+  opacity: 0;
+}
+
 .scrivito-space-widget-handle {
   margin: 0;
   padding: 0;
@@ -59,6 +72,7 @@ hr.scrivito-space-widget.xxl-large {
   }
 }
 
-[data-scrivito-widget-obj-class="SpaceWidget"]:hover .scrivito-space-widget-handle {
+[data-scrivito-widget-obj-class="SpaceWidget"]:hover .scrivito-space-widget-handle,
+[data-scrivito-widget-obj-class="SpaceWidget"]:hover .scrivito-space-widget-size {
   opacity: 1.0;
 }
